# tourism

./: .gitignore  .pre-commit-config.yaml  Makefile  custom.db.sqlite3  manage.py  pyproject.toml  users_db.sqlite3
apps/api/: urls.py
apps/comments/: admin.py  models.py  urls.py
apps/comments/api/v1/: urls.py
apps/common/: constants.py  models.py  regex_patterns.py
apps/core/middlewares/: current_user.py
apps/core/permissions/: check_hotel_owner.py  check_object_owner.py  check_owner.py  check_reserve_owner.py  check_tour_company_owner.py
apps/hotels/: admin.py  apps.py  managers.py  serializers.py  urls.py
apps/hotels/api/v1/: urls.py
apps/hotels/models/: __init__.py  address.py  hotel.py  reservation.py  room.py
apps/profiles/: serializers.py  urls.py
apps/services/: otp.py  send_otp.py
apps/tests/hotels/: hotel.py  resrvation.py  room.py  setup.py  test_hotel.py  test_resrvation.py  test_room.py
apps/tests/profiles/: setup.py  test_profile_apis.py
apps/tests/tours/: company.py  setup.py  test_company.py  test_reservation.py  test_tour.py  tour.py
apps/tests/users/: setup.py  test_apis.py  test_models.py  test_setup.py  test_user_apis.py  test_user_models.py
apps/tours/: admin.py  managers.py  serializers.py  urls.py
apps/tours/api/v1/: urls.py
apps/tours/models/: __init__.py  address.py  company.py  compony.py  reservation.py  tour.py
apps/users/: admin.py  backend.py  backends.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_phone.py  0003_user_address_user_avatar_user_is_verified.py  0004_alter_user_avatar.py  0005_user_otp.py
apps/utils/: generate_otp.py  send_email.py
apps/utils/fields/: current_user.py  file_field.py
config/: env.py  urls.py
config/db_routers/: auth_router.py  default_router.py
config/django/: __init__.py  base.py  db_config.py  email.py  env_file.py  local.py  production.py  secret.py
config/settings/: aws.py  jwt.py  logger.py
locale/fa/LC_MESSAGES/: django.mo  django.po
requirements/: base.txt  local.txt
tourism/: asgi.py  settings.py  urls.py  wsgi.py
(+19 files in other folders)
