[tool.poetry]
name = "tourism"
version = "0.1.0"
description = ""
authors = ["Reza Dalvand <rdalvand@yahoo.com>"]
readme = "README.md"
packages = [{include = "tourism"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-split-settings = "^1.2.0"
split-settings = "^1.0.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"