[tool.poetry]
name = "tourism"
version = "0.1.0"
description = ""
authors = ["Reza Dalvand <rdalvand@yahoo.com>"]
readme = "README.md"
packages = [{include = "tourism"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-split-settings = "^1.2.0"
split-settings = "^1.0.0"
django-environ = "^0.11.2"
django-rosetta = "^0.10.0"
pre-commit = "^3.6.0"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"
django-filter = "^23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'


[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120
